examples/test/testpolicy5808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5808
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key33: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value0
          key27: value16
          key5: value23
      podSelector:
        matchLabels:
          key17: value20
          key36: value7
          key40: value17
